[package]
name = "h_localizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
env_logger = "0.8.3"
anyhow = "1.0.71"
static_init = "1.0.3"
git-version = "0.3.9"

argmin = "0.9.0"
nalgebra = "0.32.3"
approx = "0.3.2"

chrono = "0.4.34"

tokio = { version = "1.35.1", features = ["full"] }
h_analyzer_client_lib = { git = "https://github.com/HarukiUchito/h_analyzer_client_lib.git" }
h_analyzer_data = { git = "https://github.com/HarukiUchito/h_analyzer_data.git" }

rosrust = { version = "0.9", optional = true }
rosrust_msg = { version = "0.1", optional = true }
clap = { version = "4.4.18", features = ["derive"] }

[features]
build-ros = ["rosrust", "rosrust_msg"]

[[bin]]
name = "odometry"
required-features = ["build-ros"]
